[project]
name = "intruder-mcp"
version = "0.1.0"
description = "MCP server for Intruder API"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
intruder-mcp = "intruder_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["intruder_mcp"] 